update docker run command

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -38,8 +38,8 @@ http {
 	# Logging Settings
 	##
 
-	access_log /var/log/nginx/access.log;
-	error_log /var/log/nginx/error.log;
+	access_log /home/alexg/access.log;
+	error_log /home/alexg/error.log;
 
 	##
 	# Gzip Settings
@@ -64,10 +64,10 @@ http {
 
     server {
         listen 9002;
-        error_log   /home/alex/web/nginx/logs/static.access.log  warn;
+        error_log   /home/alexg/static.access.log  warn;
         location / {
             add_header 'Access-Control-Allow-Origin' '*';
-            root    /home/alex/web/nginx/static;
+            root    /home/alexg/site/edream/static;
             autoindex off;
             expires 1d;
         }
