--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -67,31 +67,10 @@ http {
         error_log   /home/alexg/static.access.log  warn;
         location / {
             add_header 'Access-Control-Allow-Origin' '*';
-            root    /home/alexg/site/edream/static;
+            root    /home/alexg/github/EdreamProject/v2/target/;
             autoindex off;
-            expires 1d;
+            expires 1s;
         }
     }
 }
 
-
-#mail {
-#	# See sample authentication script at:
-#	# http://wiki.nginx.org/ImapAuthenticateWithApachePhpScript
-# 
-#	# auth_http localhost/auth.php;
-#	# pop3_capabilities "TOP" "USER";
-#	# imap_capabilities "IMAP4rev1" "UIDPLUS";
-# 
-#	server {
-#		listen     localhost:110;
-#		protocol   pop3;
-#		proxy      on;
-#	}
-# 
-#	server {
-#		listen     localhost:143;
-#		protocol   imap;
-#		proxy      on;
-#	}
-#}
